--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -405,7 +405,7 @@ nav a:hover {
   0%   { background-image: url(../items/portafolio/proyecto3/Captura\ de\ pantalla\ \(85\).png); }
   33%  { background-image: url(../items/portafolio/proyecto3/Captura\ de\ pantalla\ \(86\).png); }
   66% { background-image: url(../items/portafolio/proyecto3/Captura\ de\ pantalla\ \(87\).png); }
-  100% { background-image: url(../items/portafolio/proyecto3/Captura\ de\ pantalla\ \(88\).pngCaptura\ de\ pantalla\ \(87\).png); }
+  100% { background-image: url(../items/portafolio/proyecto3/Captura\ de\ pantalla\ \(88\).png); }
 }  
 
 .project4 {
